--- a/resources/oz/public/css/style.css
+++ b/resources/oz/public/css/style.css
@@ -8,7 +8,8 @@
 
 body {
   padding: 30px;
-  line-height: 1.7;
+  font-size: 18px;
+  line-height: 1.7em;
   font-family: 'Computer Modern Concrete', serif;
 }
 
@@ -56,28 +57,28 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 3rem;
   margin-top: 40px;
   margin-bottom: 20px;
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 2rem;
   margin-top: 50px;
   margin-bottom: 15px;
 }
 
 h3 {
-  font-size: 23px;
+  font-size: 1.5rem;
   margin-top: 40px;
   margin-bottom: 13px;
 }
 
-h4 {font-size: 18px;}
+h4 {font-size: 1.25rem;}
 
 code {
   line-height: 1.5;
-  font-size: 14.5px;
+  font-size: 1.0rem;
   color: #606060;
   margin-right: 4px;
   margin-left: 4px;
@@ -86,7 +87,8 @@ code {
 
 pre {
   line-height: 1.5;
-  font-size: 14.5px;
+  font-size: 1.0rem;
+  /*font-size: 1rem;*/
   color: #606060;
   font-family: "Computer Modern Typewriter", monospace;
 }
